--- a/views/country.ejs
+++ b/views/country.ejs
@@ -4,8 +4,8 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Team <%= mapName %></title>
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="<%= mapData %>"></script>
-    <script src="<%= countryMap %>"></script>
+    <script type="text/javascript" src="<%= mapData %>"></script>
+    <script type="text/javascript" src="<%= countryMap %>"></script>
   </head>
   <body>
     <header>
