--- a/views/country.ejs
+++ b/views/country.ejs
@@ -62,10 +62,10 @@
 
 // question 1 check
 
-    if(ans.value==="4"){
+    if(ans1.value==="4"){
         q1.classList.remove("q1");
         q1.classList.add("right");
-    }else if(ans.value==="0"){
+    }else if(ans1.value==="0"){
       if(q1.classList==="wrong"){
         q1.classList.remove("wrong");
       }else if(q1.classList==="right"){
@@ -77,13 +77,13 @@
         q1.classList.remove("q1");
         q1.classList.add("wrong");
     }
-    
+
 // question 2 check
 
-    if(ans.value==="6"){
+    if(ans2.value==="6"){
         q2.classList.remove("q2");
         q2.classList.add("right");
-    }else if(ans.value==="0"){
+    }else if(ans2.value==="0"){
       if(q2.classList==="wrong"){
         q2.classList.remove("wrong");
       }else if(q2.classList==="right"){
